--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -1,12 +1,33 @@
-﻿html, body {
+﻿html, body, #MainContainer {
     padding: 0;
     margin: 0;
     overflow: hidden;
     width:100%;
     height:100%;
+    position: relative;
 }
+
 #cnv { 
     position: absolute; 
+    z-index: 1;
     overflow: hidden;
     border: 1px dashed black;
 }
+
+#Settings {
+    position: absolute;
+    margin: 0 auto;
+    z-index: 2;
+    background-color:gray; 
+}
+
+   .colorwell {
+     border: 2px solid #fff;
+     width: 6em;
+     text-align: center;
+     cursor: pointer;
+   }
+   body .colorwell-selected {
+     border: 2px solid #000;
+     font-weight: bold;
+   }
