--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -1,6 +1,6 @@
 ﻿html, body, #MainContainer {
-    padding: 0;
-    margin: 0;
+    padding: 0px;
+    margin: 0px;
     overflow: hidden;
     width:100%;
     height:100%;
@@ -8,15 +8,35 @@
 }
 
 #cnv { 
-    position: absolute; 
+    /*position: absolute;*/ 
+    float:right;
     z-index: 1;
     overflow: hidden;
-    border: 1px dashed black;
+   /* width:600px;
+    height:600px;*/
 }
 
 #Settings {
     position: absolute;
     margin: 0 auto;
     z-index: 2;
-    background-color:gray; 
+    opacity:100;
+}
+
+#settingsPanel {
+    display:none;
+}
+
+.settingsRow {
+    margin-bottom:5px;
+    width:100%;
+}
+
+.settingsRow > label {
+    margin-right: 5px;
+}
+
+.settingsRow input {
+    width: 40px;
+    height: 20px;
 }
