some little changes

--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -30,7 +30,7 @@
 #slide-panel {
     position: absolute;
     z-index: 2;
-    width:250px;
+    width:260px;
     height: 100vh;
     padding:10px;
     margin-left:-250px;
@@ -40,4 +40,15 @@
     float:right;
     margin: 0px -50px 0px 0px;
     border-radius:0;
+}
+
+.add-button {
+    color: black;
+    font-size: 12pt;
+    border: none ;
+    background-color: white;
+
+}
+.add-button:hover {
+    color: red;
 }
